kubernetes/auth/lldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  labels:
    app: lldap
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 55327
        runAsGroup: 12884
      volumes:
      - name: data
        hostPath:
          path: /data/lldap
      - name: secrets
        secret:
          secretName: lldap-secrets
      - name: cert
        secret:
          secretName: ldap-server
      containers:
      - name: lldap
        # https://github.com/lldap/lldap/pkgs/container/lldap/versions
        image: lldap/lldap:2026-03-04-alpine
        command: [ "/app/lldap" ] # skip the default entrypoint checks
        args: [ "run", "--config-file", "/secrets/lldap_config.toml" ]
        volumeMounts:
        - name: data
          mountPath: /data
        - name: secrets
          mountPath: /secrets
        - name: cert
          mountPath: /cert
        ports:
        - name: ldap
          containerPort: 3890
        - name: ldaps
          containerPort: 636
        - name: http
          containerPort: 17170
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            # bursts during authentication
            cpu: "1000m"
            memory: "200Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: lldap-http
spec:
  selector:
    app: lldap
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: lldap-ldaps
  annotations:
    metallb.io/loadBalancerIPs: 10.226.56.50
    metallb.io/allow-shared-ip: 10.226.56.50
spec:
  selector:
    app: lldap
  ports:
  - name: ldaps
    protocol: TCP
    port: 636
    targetPort: ldaps
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "lldap.home.cambridge.me"
    secretName: lldap-home-cambridge-me-tls
  rules:
  - host: lldap.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap-http
            port:
              name: http
