kubernetes/auth/oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 62884
        runAsGroup: 12884
      volumes:
      - name: oauth2-proxy-config
        configMap:
          name: oauth2-proxy
      containers:
      - name: oauth2-proxy
        # https://quay.io/repository/oauth2-proxy/oauth2-proxy?tab=tags&tag=latest
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.15.1-amd64
        ports:
        - name: http
          containerPort: 4180
        args:
        - --config=/config/oauth2-proxy.cfg
        volumeMounts:
        - name: oauth2-proxy-config
          mountPath: /config
        resources:
          requests:
            cpu: "10m"
            memory: "10Mi"
          limits:
            cpu: "100m"
            memory: "50Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - "oauth2-proxy.home.cambridge.me"
    secretName: oauth2-proxy-home-cambridge-me-tls
  rules:
  - host: oauth2-proxy.home.cambridge.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              name: http
